maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:1: error: Missing closing brace `}' assumed here
def makeMoving() {
^WallFollowerMaze:1: error: expected class or object definition
def makeMoving() {
^