maze.wallfollower.WallFollowerMaze.scala.code
def makeMoving() {
  while (!isFacingWall()) {
    forward();
  }
  right();
  

override def run() {
	while (!isOverBaggle()) {
    makeMoving();
  }
  pickupBaggle();
}